[package]
name = "hyperlocal"
version = "0.6.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Hyper bindings for unix domain sockets"
homepage = "https://github.com/softprops/hyperlocal"
repository = "https://github.com/softprops/hyperlocal"
keywords = ["hyper", "unix", "sockets", "http"]
license = "MIT"
readme = "README.md"

[dependencies]
futures = "0.1"
hex = "0.3"
hyper = "0.12"
tokio = "0.1"
tokio-io = "0.1"
tokio-uds = { git = "https://github.com/damonbarry/tokio.git", branch = "windows" }

[target.'cfg(windows)'.dependencies]
mio-uds-windows = { git = "https://github.com/damonbarry/mio-uds-windows.git" }

[replace]
"tokio-executor:0.1.5" = { git = "https://github.com/damonbarry/tokio.git", branch = "windows" }
"tokio-io:0.1.9" = { git = "https://github.com/damonbarry/tokio.git", branch = "windows" }
"tokio-reactor:0.1.6" = { git = "https://github.com/damonbarry/tokio.git", branch = "windows" }
"tokio-tcp:0.1.2" = { git = "https://github.com/damonbarry/tokio.git", branch = "windows" }
"tokio-timer:0.2.7" = { git = "https://github.com/damonbarry/tokio.git", branch = "windows" }
"tokio:0.1.11" = { git = "https://github.com/damonbarry/tokio.git", branch = "windows" }